# add_grayscale_images_cuda

./: CMakeLists.txt  README.md
media/: sources.md
src/: CMakeLists.txt  main.cu
